<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.main.LaunchpadFragment"
    android:id="@+id/launchpad"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/launchpad_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    >

        <Button android:id="@+id/start_day"
                android:layout_width="0dp"
                android:layout_height="155dp"
                android:drawableTop="@drawable/ic_today_red_70dp"
                android:text="@string/start_day"
                android:padding="16dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/launchpadButtonColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/open_deliveries"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />

        <Button android:id="@+id/back_to_map"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:drawableTop="@drawable/ic_map_red_70dp"
                android:text="@string/back_to_map"
                android:padding="16dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/launchpadButtonColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/open_deliveries"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/finish_day"
                android:visibility="invisible"
        />

        <Button android:id="@+id/finish_day"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:drawableTop="@drawable/ic_today_red_70dp"
                android:text="@string/finish_day"
                android:padding="16dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/launchpadButtonColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/delivered_not_delivered"
                app:layout_constraintLeft_toRightOf="@id/back_to_map"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="invisible"
        />

        <Button
            android:id="@+id/open_deliveries"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_margin="8dp"
            android:drawableTop="@drawable/ic_skip_next_black_70dp"
            android:padding="16dp"
            android:text="@string/open_deliveries"
            android:backgroundTint="@color/launchpadButtonColor"
            app:layout_constraintBottom_toTopOf="@+id/settings"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@id/delivered_not_delivered"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_to_map" />

        <Button
            android:id="@+id/delivered_not_delivered"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_margin="8dp"
            android:drawableTop="@drawable/ic_skip_previous_red_70dp"
            android:padding="16dp"
            android:text="@string/delivered_not_delivered"
            android:backgroundTint="@color/launchpadButtonColor"
            app:layout_constraintBottom_toTopOf="@+id/ambient_intelligence"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delivered_not_delivered"
            app:layout_constraintTop_toBottomOf="@id/finish_day" />

        <Button android:id="@+id/settings"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:drawableTop="@drawable/ic_settings_red_70dp"
                android:text="@string/settings"
                android:padding="16dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/launchpadButtonColor"
                app:layout_constraintTop_toBottomOf="@id/open_deliveries"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ambient_intelligence"
        />

        <Button android:id="@+id/ambient_intelligence"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:drawableTop="@drawable/ic_help_red_70dp"
                android:text="Intelligence"
                android:padding="16dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/launchpadButtonColor"
                app:layout_constraintTop_toBottomOf="@id/delivered_not_delivered"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/settings"
                app:layout_constraintRight_toRightOf="parent"
        />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
