<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/usernameButton"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:textSize="16dp"
        android:background="#E9E9E9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="24dp"
        android:drawableStart="@drawable/ic_person_red_24dp"
        android:paddingEnd="24dp"
        android:clickable="false"
        android:drawablePadding="24dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingSeparator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
    />

    <View
        android:id="@+id/settingSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/usernameButton"
        app:layout_constraintBottom_toTopOf="@id/intelligenceModeSettingsContainer"
        android:background="@android:color/darker_gray"/>


    <RelativeLayout
        android:id="@+id/intelligenceModeSettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settingSeparator"
        app:layout_constraintBottom_toTopOf="@id/themeButtonContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"/>

    <RelativeLayout
        android:id="@+id/themeButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/intelligenceModeSettingsContainer"
        app:layout_constraintBottom_toTopOf="@id/helperLabelsButtonContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"/>

    <RelativeLayout
        android:id="@+id/helperLabelsButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/themeButtonContainer"
        app:layout_constraintBottom_toTopOf="@id/languageButtonContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"/>

    <RelativeLayout
        android:id="@+id/languageButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/helperLabelsButtonContainer"
        app:layout_constraintBottom_toTopOf="@id/privacyButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent">

        <Button
            android:id="@+id/languageButton"
            android:text="@string/language"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="16dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingStart="24dp"
            android:drawableStart="@drawable/ic_info_red_24dp"
            android:drawablePadding="24dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:minWidth="32dp"
            android:minHeight="18dp"
            android:layout_alignParentRight="true"
        />

    </RelativeLayout>

    <Button
        android:id="@+id/privacyButton"
        android:text="@string/terms_and_privacy_settings"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:textSize="16dp"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="24dp"
        android:drawableStart="@drawable/ic_description_red_24dp"
        android:drawablePadding="24dp"
        app:layout_constraintTop_toBottomOf="@id/helperLabelsButtonContainer"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
    />


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/baseline_exit_to_app_24px"
        android:drawablePadding="24dp"
        android:paddingStart="24dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:text="@string/log_out"
        android:textAlignment="textStart"
        android:textAllCaps="false"

        android:textSize="16dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parcelResetButton" />

    <Button
        android:id="@+id/parcelResetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_info_red_24dp"
        android:drawablePadding="24dp"
        android:paddingStart="24dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:text="@string/parcel_status_reset"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16dp"

        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacyButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/goto_launchpad_from_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_home_black_24dp"
        android:tint="@android:color/white"
        android:backgroundTint="@color/logoRed"
        app:maxImageSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
        android:id="@+id/settings_bluetoothOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_solid"
        android:text="Bluetooth Overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />


</androidx.constraintlayout.widget.ConstraintLayout>