<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_v2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/topPanel_bShet_v2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bottom_sheet_pull_btn_bSheet_v2"
            android:layout_width="225dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="14dp"
            android:src="@drawable/bottom_sheet_pull_line" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_recView_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_parcels_overview"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_singleParcel_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_delivery_address"
                android:textSize="15sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="50dp">

                <TextView
                    android:id="@+id/bottom_sheet_street_text_view_bSheet_v2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:textColor="@color/widget_edittext_dark"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/bottom_sheet_street_additional_information_text_view_bSheet_v2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="15sp"
                tools:text="" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:id="@+id/bottomPanel_bSheet_v2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customer_info_bSheet_v2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_information"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <HorizontalScrollView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toStartOf="@id/bottom_sheet_phone_button_bSheet_v2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/bottom_sheet_recipient_name_text_view_bSheet_v2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="true"
                        android:textColor="@color/widget_edittext_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="" />
                </HorizontalScrollView>

                <Button
                    android:id="@+id/bottom_sheet_phone_button_bSheet_v2"
                    android:layout_width="49dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/custom_call_button_selector"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/bottom_sheet_recipient_name__additional_information_text_view_bSheet_v2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="50dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="15sp"
                tools:text="" />

            <de.dpd.vanassist.controls.SwipeButton
                android:id="@+id/swipe_btn_bSheet_v2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>